--- a/ExchangeRatesLibrary/Resources/TextResources.resx
+++ b/ExchangeRatesLibrary/Resources/TextResources.resx
@@ -123,7 +123,10 @@
   <data name="InvalidCurrencyCode" xml:space="preserve">
     <value>Currency with this code is not supported.</value>
   </data>
+  <data name="UnableToProcessData" xml:space="preserve">
+    <value>Failed to process data received from server.</value>
+  </data>
   <data name="UnacceptablePastDate" xml:space="preserve">
-    <value>No data on this date.</value>
+    <value>No data available for this date.</value>
   </data>
 </root>
